@@ -41,6 +41,7 @@ public class Util {
 			.fullRawInstance();
 	public final static MiniParser NO_QUOTE_MINI_PARSER = new MiniParser(
 			MiniParser.DEFAULT_ESCAPE_CHAR, (char) -1, false, false, false);
+	public final static MiniParser RAW_OUTPUT_MINI_PARSER = MiniParser.rawOutputInstance();
 
 	/**
 	 * Writes a string into a file.
